dark mode love plus other fixes

--- a/src/ui/scss/component/_icon.scss
+++ b/src/ui/scss/component/_icon.scss
@@ -15,4 +15,8 @@
     position: absolute;
     stroke: $lbry-gray-5;
   }
+
+  [data-mode='dark'] & {
+    background-color: var(--color-card-actions--dark);
+  }
 }
