--- a/src/ui/scss/init/_vars.scss
+++ b/src/ui/scss/init/_vars.scss
@@ -41,6 +41,7 @@ $large-breakpoint: 1921px;
   --color-background: #f7f7f7;
   --color-background--splash: #270f34;
   --color-card-actions: #f7fbfe;
+  --color-card-actions--dark: #545454;
 
   // Dark Mode
   --dm-color-01: #ddd;
